[gd_scene load_steps=5 format=3 uid="uid://cyk4ymk8vp06c"]

[ext_resource type="Theme" uid="uid://d0u1btg7fmnt2" path="res://Scenes/UI/game_ui_theme.tres" id="1_gne6s"]
[ext_resource type="Texture2D" uid="uid://dx7xn0n2hanpx" path="res://Assets/UI/ui_sprites.png" id="2_rnurc"]
[ext_resource type="Script" path="res://Scripts/UI/PlayerOverlay/day_night_panel.gd" id="2_vtuxu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qtq5o"]
atlas = ExtResource("2_rnurc")
region = Rect2(261, 2, 7, 12)

[node name="DayNightPanel" type="Control"]
layout_mode = 3
pivot_offset = Vector2(105, 0)
theme = ExtResource("1_gne6s")
script = ExtResource("2_vtuxu")

[node name="DayPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -105.0
offset_bottom = 26.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="DayPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "Day 10"

[node name="TimePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -105.0
offset_top = 25.0
offset_bottom = 51.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="TimePanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="TimePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "12:59"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -94.0
offset_right = -54.0
offset_bottom = 40.0

[node name="NormalSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_top = 52.0
offset_right = 26.0
offset_bottom = 70.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/NormalSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -6.0
offset_right = 3.5
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qtq5o")

[node name="FastSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 29.0
offset_top = 52.0
offset_right = 55.0
offset_bottom = 70.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect2" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_right = 7.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qtq5o")

[node name="TextureRect" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qtq5o")

[node name="FastestSpeedButton" type="Button" parent="Control"]
offset_left = 57.0
offset_top = 52.0
offset_right = 83.0
offset_bottom = 70.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect3" type="TextureRect" parent="Control/FastestSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -6.0
offset_right = 9.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qtq5o")

[node name="TextureRect2" type="TextureRect" parent="Control/FastestSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qtq5o")

[node name="TextureRect" type="TextureRect" parent="Control/FastestSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -6.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qtq5o")

[connection signal="pressed" from="Control/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="Control/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="Control/FastestSpeedButton" to="." method="_on_fastest_speed_button_pressed"]
